# Libxmls_BIOM

./: CMakeLists.txt  README.md
include/libXBase/: XAbsoluteTime.h  XAlgoGeod.h  XArchiGeoref.h  XArchiGeorefXML.h  XArchiTime.h  XArchiXMLBaseTools.h  XArchiXMLException.h  XArchiXMLTools.h  XBase.h  XColorTools.h  XError.h  XFInterpol.h  XFrame.h  XGpsTools.h  XGrilleGeoide.h  XInterpolLin.h  XMat3D.h  XPath.h  XPt2D.h  XPt3D.h  XQuaternion.h  XRect.h  XStringTools.h  XSystemInfo.h  XTransfoGeod.h  XWgs2Lambert.h  XWgs2Lambert93.h
include/libXMls/: XAttribute.h  XCam.h  XEchoPulseTables.h  XMCam.h  XMls.h  XTrajecto.h  write_geojson.hpp
src/: CMakeLists.txt
src/exe/: CMakeLists.txt  Decimate.cpp  EptReader.cpp  GenerateTimePivot.cpp  KinWa2d.cpp  ListIntersect.cpp  Openings.cpp  Polygon.cpp  RieglFlexport.cpp  SelfRegistration.cpp  SensorEdges.cpp  SensorMesh.cpp  SensorMesh2.cpp  SensorMesh3.cpp  SensorMesh3_old.cpp  XMlsAttrib.cpp  XMlsInfo.cpp  XTrajectoSample.cpp
src/exe/KinWa/: CMakeLists.txt  KinWa2d.cpp  PlyExport.cpp  PlyExport.h  PriorityEdge.cpp  PriorityEdge.h  PriorityVertex.cpp  PriorityVertex.h  common.h
src/lib/: CMakeLists.txt
src/lib/libXBase/: CMakeLists.txt  ConsoleError.cpp  XAbsoluteTime.cpp  XAffinity2D.cpp  XArchiGeoref.cpp  XArchiGeorefXML.cpp  XArchiTime.cpp  XArchiXMLBaseTools.cpp  XArchiXMLTools.cpp  XBBox.cpp  XErrorTxt.cpp  XErrorXml.cpp  XFrame.cpp  XInterpolLin.cpp  XMat3D.cpp  XPath.cpp  XPt2D.cpp  XPt3D.cpp  XQuaternion.cpp  XRect.cpp  XStringTools.cpp  XSystemInfo.cpp  raf98.txt
src/lib/libXMls/: CMakeLists.txt  XAttribute.cpp  XCam.cpp  XEchoPulseTables.cpp  XMCam.cpp  XMls.cpp  XTrajecto.cpp
